--- a/test/templates/home.html
+++ b/test/templates/home.html
@@ -212,7 +212,7 @@
                                                 <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary mx-1 my-2">
                                                     <i class="fa fa-heart me-2 text-primary"></i>
                                                 </a>
-                                                <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary mx-1 my-2">Info</a>
+                                                <a href="/product/{{elem.code}}" class="btn border border-secondary rounded-pill px-3 text-primary mx-1 my-2">Info</a>
                                             </div>
                                         </div>
                                     </div>
