--- a/test/templates/product-details.html
+++ b/test/templates/product-details.html
@@ -23,10 +23,13 @@
 
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+<!--    <link href="static/css/bootstrap.min.css" rel="stylesheet">-->
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/static/css/bootstrap.min.css') }}">
 
     <!-- Template Stylesheet -->
-    <link href="static/css/style.css" rel="stylesheet">
+<!--    <link href="static/css/style.css" rel="stylesheet">-->
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/static/css/style.css') }}">
+
     <style>
         .img-best {
         max-width: 100%;
