--- a/test/templates/shop.html
+++ b/test/templates/shop.html
@@ -24,9 +24,11 @@
 
 
     <!-- Customized Bootstrap Stylesheet -->
+<!--    <link href="static/css/bootstrap.min.css" rel="stylesheet">-->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
 
     <!-- Template Stylesheet -->
+<!--    <link href="static/css/style.css" rel="stylesheet">-->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 
