--- a/test/templates/home.html
+++ b/test/templates/home.html
@@ -116,7 +116,7 @@
                         <div class="carousel-item active rounded">
                             <img src="static/imgTest/home_start_info.jpeg" class="img-fluid w-100 h-100 bg-secondary rounded"
                                  alt="First slide">
-                            <a href="#" class="btn px-4 py-2 text-white rounded">Informazion</a>
+                            <a href="#" class="btn px-4 py-2 text-white rounded">Informazione</a>
                         </div>
                         <div class="carousel-item rounded">
                             <img src="static/imgTest/home_start_ricette.jpg" class="img-fluid w-100 h-100 rounded" alt="Second slide">
