--- a/test/templates/home.html
+++ b/test/templates/home.html
@@ -48,7 +48,7 @@
             <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
                 <div class="navbar-nav mx-auto">
                     <a href="/" class="nav-item nav-link active">Home</a>
-                    <a href="/shop" class="nav-item nav-link">Categorie (shop)</a>
+                    <a href="/login2" class="nav-item nav-link">New login</a>
                     <a href="/product" class="nav-item nav-link">Prodotti</a>
                     <a href="/ia" class="nav-item nav-link disabled">SpeSana.IA</a>
                 </div>
