--- a/test/templates/home.html
+++ b/test/templates/home.html
@@ -32,6 +32,10 @@
         max-width: 100%;
         height: 200px
         }
+
+        .maxText {
+        height: 100px;
+        }
     </style>
 </head>
 <body>
@@ -199,7 +203,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="d-flex m-2 py-2 bg-light rounded-pill" data-bs-toggle="pill" href="#tab-4">
+                            <a class="d-flex m-2 py-2 bg-light rounded-pill" data-bs-toggle="pill" href="#tab-5">
                                 <span class="text-dark" style="width: 130px;">Nutriscore E</span>
                             </a>
                         </li>
@@ -210,160 +214,142 @@
             <div class="tab-content">
 
                 <div id="tab-1" class="tab-pane fade show p-0 active">
+                    <div class="row g-4 mx-auto">
+                        {% for elem in lista_nutriscore[0][:4] %}
+                        <div class="col-md-6 col-lg-4 col-xl-3">
+                            <div class="rounded position-relative fruite-item d-flex flex-column">
 
-                    <div class="row g-4 ">
-                        <div class="col-lg-12">
-                            <div class="row g-4">
-                                {% for elem in lista_nutriscore[0][:4] %}
-                                <div class="col-md-6 col-lg-4 col-xl-3">
-                                    <div class="rounded position-relative fruite-item d-flex flex-column">
-
-                                        <div class="fruite-img">
-                                            <img src="{{elem.image_url}}"
-                                                 class="img-fluid w-100 rounded-top" alt="">
-                                        </div>
-                                        <div class="text-white bg-secondary px-3 py-1 rounded position-absolute"
-                                             style="top: 10px; left: 10px;">A
-                                        </div>
-                                        <div class="p-4 border border-secondary border-top-0 rounded-bottom d-flex flex-column align-items-center h-300">
-                                            <h4 class="mb-0">{{elem.product_name}}</h4>
-                                            <div class="d-flex justify-content-between flex-lg-wrap">
-                                                <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary mx-1 my-2">
-                                                    <i class="fa fa-heart me-2 text-primary"></i>
-                                                </a>
-                                                <a href="/product/{{elem.code}}" class="btn border border-secondary rounded-pill px-3 text-primary mx-1 my-2">Info</a>
-                                            </div>
-                                        </div>
+                                <div class="fruite-img">
+                                    <img src="{{elem.image_url}}"
+                                         class="img-fluid w-100 rounded-top" alt="">
+                                </div>
+                                <div class="text-white bg-secondary px-3 py-1 rounded position-absolute"
+                                     style="top: 10px; left: 10px;">A
+                                </div>
+                                <div class="p-4 border border-secondary border-top-0 rounded-bottom d-flex flex-column align-items-center h-300">
+                                    <h4 class="maxText mb-0">{{elem.product_name}}</h4>
+                                    <div class="d-flex justify-content-between flex-lg-wrap">
+                                        <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary mx-1 my-2">
+                                            <i class="fa fa-heart me-2 text-primary"></i>
+                                        </a>
+                                        <a href="/product/{{elem.code}}" class="btn border border-secondary rounded-pill px-3 text-primary mx-1 my-2">Info</a>
                                     </div>
                                 </div>
-                                {% endfor %}
                             </div>
                         </div>
+                        {% endfor %}
                     </div>
                 </div>
 
                 <div id="tab-2" class="tab-pane fade show p-0">
-                    <div class="row g-4">
-                        <div class="col-lg-12">
-                            <div class="row g-4">
-                                <div class="col-md-6 col-lg-4 col-xl-3">
-                                    <div class="rounded position-relative fruite-item">
-                                        <div class="fruite-img">
-                                            <img src="static/imgTest/img-not-found.jpg"
-                                                 class="img-fluid w-100 rounded-top" alt="">
-                                        </div>
-                                        <div class="text-white bg-secondary px-3 py-1 rounded position-absolute"
-                                             style="top: 10px; left: 10px;">Fruits
-                                        </div>
-                                        <div class="p-4 border border-secondary border-top-0 rounded-bottom">
-                                            <h4>Grapes</h4>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod te
-                                                incididunt</p>
-                                            <div class="d-flex justify-content-between flex-lg-wrap">
-                                                <p class="text-dark fs-5 fw-bold mb-0">$4.99 / kg</p>
-                                                <a href="#"
-                                                   class="btn border border-secondary rounded-pill px-3 text-primary"><i
-                                                        class="fa fa-shopping-bag me-2 text-primary"></i> Add to
-                                                    cart</a>
-                                            </div>
-                                        </div>
+                    <div class="row g-4 mx-auto">
+                        {% for elem in lista_nutriscore[1][:4] %}
+                        <div class="col-md-6 col-lg-4 col-xl-3">
+                            <div class="rounded position-relative fruite-item d-flex flex-column">
+
+                                <div class="fruite-img">
+                                    <img src="{{elem.image_url}}"
+                                         class="img-fluid w-100 rounded-top" alt="">
+                                </div>
+                                <div class="text-white bg-secondary px-3 py-1 rounded position-absolute"
+                                     style="top: 10px; left: 10px;">B
+                                </div>
+                                <div class="p-4 border border-secondary border-top-0 rounded-bottom d-flex flex-column align-items-center h-300">
+                                    <h4 class="maxText mb-0">{{elem.product_name}}</h4>
+                                    <div class="d-flex justify-content-between flex-lg-wrap">
+                                        <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary mx-1 my-2">
+                                            <i class="fa fa-heart me-2 text-primary"></i>
+                                        </a>
+                                        <a href="/product/{{elem.code}}" class="btn border border-secondary rounded-pill px-3 text-primary mx-1 my-2">Info</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                        {% endfor %}
                     </div>
                 </div>
+
                 <div id="tab-3" class="tab-pane fade show p-0">
-                    <div class="row g-4">
-                        <div class="col-lg-12">
-                            <div class="row g-4">
-                                <div class="col-md-6 col-lg-4 col-xl-3">
-                                    <div class="rounded position-relative fruite-item">
-                                        <div class="fruite-img">
-                                            <img src="static/imgTest/img-not-found.jpg"
-                                                 class="img-fluid w-100 rounded-top" alt="">
-                                        </div>
-                                        <div class="text-white bg-secondary px-3 py-1 rounded position-absolute"
-                                             style="top: 10px; left: 10px;">Fruits
-                                        </div>
-                                        <div class="p-4 border border-secondary border-top-0 rounded-bottom">
-                                            <h4>Oranges</h4>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod te
-                                                incididunt</p>
-                                            <div class="d-flex justify-content-between flex-lg-wrap">
-                                                <p class="text-dark fs-5 fw-bold mb-0">$4.99 / kg</p>
-                                                <a href="#"
-                                                   class="btn border border-secondary rounded-pill px-3 text-primary"><i
-                                                        class="fa fa-shopping-bag me-2 text-primary"></i> Add to
-                                                    cart</a>
-                                            </div>
-                                        </div>
+                    <div class="row g-4 mx-auto">
+                        {% for elem in lista_nutriscore[2][:4] %}
+                        <div class="col-md-6 col-lg-4 col-xl-3">
+                            <div class="rounded position-relative fruite-item d-flex flex-column">
+
+                                <div class="fruite-img">
+                                    <img src="{{elem.image_url}}"
+                                         class="img-fluid w-100 rounded-top" alt="">
+                                </div>
+                                <div class="text-white bg-secondary px-3 py-1 rounded position-absolute"
+                                     style="top: 10px; left: 10px;">C
+                                </div>
+                                <div class="p-4 border border-secondary border-top-0 rounded-bottom d-flex flex-column align-items-center h-300">
+                                    <h4 class="maxText mb-0">{{elem.product_name}}</h4>
+                                    <div class="d-flex justify-content-between flex-lg-wrap">
+                                        <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary mx-1 my-2">
+                                            <i class="fa fa-heart me-2 text-primary"></i>
+                                        </a>
+                                        <a href="/product/{{elem.code}}" class="btn border border-secondary rounded-pill px-3 text-primary mx-1 my-2">Info</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                        {% endfor %}
                     </div>
                 </div>
+
                 <div id="tab-4" class="tab-pane fade show p-0">
-                    <div class="row g-4">
-                        <div class="col-lg-12">
-                            <div class="row g-4">
-                                <div class="col-md-6 col-lg-4 col-xl-3">
-                                    <div class="rounded position-relative fruite-item">
-                                        <div class="fruite-img">
-                                            <img src="static/imgTest/img-not-found.jpg"
-                                                 class="img-fluid w-100 rounded-top" alt="">
-                                        </div>
-                                        <div class="text-white bg-secondary px-3 py-1 rounded position-absolute"
-                                             style="top: 10px; left: 10px;">Fruits
-                                        </div>
-                                        <div class="p-4 border border-secondary border-top-0 rounded-bottom">
-                                            <h4>Grapes</h4>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod te
-                                                incididunt</p>
-                                            <div class="d-flex justify-content-between flex-lg-wrap">
-                                                <p class="text-dark fs-5 fw-bold mb-0">$4.99 / kg</p>
-                                                <a href="#"
-                                                   class="btn border border-secondary rounded-pill px-3 text-primary"><i
-                                                        class="fa fa-shopping-bag me-2 text-primary"></i> Add to
-                                                    cart</a>
-                                            </div>
-                                        </div>
+                    <div class="row g-4 mx-auto">
+                        {% for elem in lista_nutriscore[3][:4] %}
+                        <div class="col-md-6 col-lg-4 col-xl-3">
+                            <div class="rounded position-relative fruite-item d-flex flex-column">
+
+                                <div class="fruite-img">
+                                    <img src="{{elem.image_url}}"
+                                         class="img-fluid w-100 rounded-top" alt="">
+                                </div>
+                                <div class="text-white bg-secondary px-3 py-1 rounded position-absolute"
+                                     style="top: 10px; left: 10px;">D
+                                </div>
+                                <div class="p-4 border border-secondary border-top-0 rounded-bottom d-flex flex-column align-items-center h-300">
+                                    <h4 class="maxText mb-0">{{elem.product_name}}</h4>
+                                    <div class="d-flex justify-content-between flex-lg-wrap">
+                                        <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary mx-1 my-2">
+                                            <i class="fa fa-heart me-2 text-primary"></i>
+                                        </a>
+                                        <a href="/product/{{elem.code}}" class="btn border border-secondary rounded-pill px-3 text-primary mx-1 my-2">Info</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                        {% endfor %}
                     </div>
                 </div>
+
                 <div id="tab-5" class="tab-pane fade show p-0">
-                    <div class="row g-4">
-                        <div class="col-lg-12">
-                            <div class="row g-4">
-                                <div class="col-md-6 col-lg-4 col-xl-3">
-                                    <div class="rounded position-relative fruite-item">
-                                        <div class="fruite-img">
-                                            <img src="static/imgTest/img-not-found.jpg"
-                                                 class="img-fluid w-100 rounded-top" alt="">
-                                        </div>
-                                        <div class="text-white bg-secondary px-3 py-1 rounded position-absolute"
-                                             style="top: 10px; left: 10px;">Fruits
-                                        </div>
-                                        <div class="p-4 border border-secondary border-top-0 rounded-bottom">
-                                            <h4>Banana</h4>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod te
-                                                incididunt</p>
-                                            <div class="d-flex justify-content-between flex-lg-wrap">
-                                                <p class="text-dark fs-5 fw-bold mb-0">$4.99 / kg</p>
-                                                <a href="#"
-                                                   class="btn border border-secondary rounded-pill px-3 text-primary"><i
-                                                        class="fa fa-shopping-bag me-2 text-primary"></i> Add to
-                                                    cart</a>
-                                            </div>
-                                        </div>
+                    <div class="row g-4 mx-auto">
+                        {% for elem in lista_nutriscore[4][:4] %}
+                        <div class="col-md-6 col-lg-4 col-xl-3">
+                            <div class="rounded position-relative fruite-item d-flex flex-column">
+
+                                <div class="fruite-img">
+                                    <img src="{{elem.image_url}}"
+                                         class="img-fluid w-100 rounded-top" alt="">
+                                </div>
+                                <div class="text-white bg-secondary px-3 py-1 rounded position-absolute"
+                                     style="top: 10px; left: 10px;">E
+                                </div>
+                                <div class="p-4 border border-secondary border-top-0 rounded-bottom d-flex flex-column align-items-center h-300">
+                                    <h4 class="maxText mb-0">{{elem.product_name}}</h4>
+                                    <div class="d-flex justify-content-between flex-lg-wrap">
+                                        <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary mx-1 my-2">
+                                            <i class="fa fa-heart me-2 text-primary"></i>
+                                        </a>
+                                        <a href="/product/{{elem.code}}" class="btn border border-secondary rounded-pill px-3 text-primary mx-1 my-2">Info</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
